iOS Doc: Created a 23.8.0 doc file
-- Updated  iOS doc to 23.12.0
-- Added 'addSegmentationToViewWithID' and 'addSegmentationToViewWithName' function calls
-- Added 'config.disableLocation'
-- Removed extra callouts

--- a/ios/23.8.0.md
+++ b/ios/23.8.0.md
@@ -1,7 +1,7 @@
 <p>
   This document includes necessary information for integrating the Countly iOS
   SDK into in your iOS / watchOS / tvOS / macOS applications, and applies to version
-  <code>23.12.X</code>.
+  <code>23.08.X</code>.
 </p>
 <p>
   Click
@@ -1344,28 +1344,6 @@ func countlyAutoViewTrackingName() -&gt; String { return "This is overridden cus
   This function resumes the tracking of a previously paused view identified by
   its unique identifier.
 </p>
-<h3 id="h_01HHPQ3RAKXJ5SSV6S4KZGPSXJ">
-  <span>Adding Segmentation to Started Views</span><span></span>
-</h3>
-<p>
-  <span><span style="font-weight: 400;">You can also add segmentation to already started views using view name or view ID:<br></span></span>
-</p>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">Objective-C</span>
-    <span class="tabs-link">Swift</span>
-  </div>
-  <div class="tab">
-    <pre><code class="objectivec">[Countly.sharedInstance.views addSegmentationToViewWithID:@"VIEW_ID" segmentation:@{@"key": @"value"}];
-      
-[Countly.sharedInstance.views addSegmentationToViewWithName:@"VIEW_NAME" segmentation:@{@"key": @"value"}];</code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="swift">Countly.sharedInstance().views.addSegmentationToViewWithID("VIEW_ID", segmentation["key": "value"])
-      
-Countly.sharedInstance().views.addSegmentationToViewWithName("VIEW_NAME", segmentation["key": "value"])</code></pre>
-  </div>
-</div>
 <h2 id="h_01HFDVW0B9P67GT7PWD4EB1J1A">Global View Segmentation</h2>
 <p>
   You can set global segmentation for views by using<span style="font-weight: 400;"> <code>setGlobalViewSegmentation:</code></span>
@@ -2323,22 +2301,7 @@ Countly.sharedInstance().recordIP("255.255.255.255")</code></pre>
   <span style="font-weight: 400;">Preferably you should use either location coordinate or city and country code pair.</span>
 </p>
 <h2 id="h_01HAVHW0RR7HA43KJ79QKR9C8S">Disabling Location</h2>
-<p>
-  <span>Also during init, you can disable location:</span>
-</p>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">Objective-C</span>
-    <span class="tabs-link">Swift</span>
-  </div>
-  <div class="tab">
-    <pre><code class="objectivec">config.disableLocation = YES;</code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="swift">config.disableLocation = true</code></pre>
-  </div>
-</div>
-<p>GeoLocation info can also be disabled after init:</p>
+<p>GeoLocation info can also be disabled:</p>
 <div class="tabs">
   <div class="tabs-menu">
     <span class="tabs-link is-active">Objective-C</span>
@@ -2721,6 +2684,9 @@ Countly.sharedInstance().remoteConfig.removeDownloadCallback{ response, error, f
       <h3 id="h_01HD1JPQ091MP8WRBZMBMZC3HD">
         <span>Enrollment on Access</span>
       </h3>
+      <div class="callout callout--warning">
+        <p>Available starting from version 23.8.3</p>
+      </div>
       <p>
         <span>You can also enroll to A/B tests while getting RC values from storage. You can use <code>getValueAndEnroll</code> while getting a single value and <code>getAllValuesAndEnroll</code> while getting all values to enroll to the keys that exist. If no value was stored for those keys these functions would not enroll the user. Both of these functions works the same way with their non-enrolling variants, namely; <code>getValue</code> and <code>getAllValues</code>.</span>
       </p>
@@ -4298,6 +4264,9 @@ end</code></pre>
 <div class="callout callout--warning">
   <p>This is an experimental feature!</p>
 </div>
+<div class="callout callout--info">
+  <p>This is available from SDK version 23.02.2</p>
+</div>
 <p>
   You can make your SDK fetch some configurations you have set in your Countly
   server by setting <code>enableServerConfiguration</code> to true during init:
@@ -4428,6 +4397,9 @@ end</code></pre>
   section.
 </p>
 <h2 id="h_01HD3ZJYNBDW19BCE6NM12HM7T">Drop Old Requests</h2>
+<div class="callout callout--warning">
+  <p>Available starting from version 23.8.3</p>
+</div>
 <p>
   If you are concerned about your app being used sparsely over a long time frame,
   old requests inside the request queue might not be important. If, for any reason,
