--- a/flutter/23.8.md
+++ b/flutter/23.8.md
@@ -1,6 +1,6 @@
 <p>
   This document will guide you through the process of Countly SDK installation
-  and it applies to version 23.12.X
+  and it applies to version 23.8.X
 </p>
 <div class="callout callout--info">
   <p>
@@ -530,14 +530,6 @@ final String? anotherViewID = Countly.instance.views.startView("HomePage", segme
   <span style="font-weight: 400;">You can also specify the custom segmentation key-value pairs while stopping all views:</span>
 </p>
 <pre><code class="JavaScript">Countly.instance.views.stopAllViews(segmentation);</code></pre>
-<p>
-  You can specify the custom segmentation for any view using the view name
-</p>
-<pre><code class="JavaScript">Countly.instance.views.addSegmentationToViewWithName(segmentation);</code></pre>
-<p>
-  <span style="font-weight: 400;">You can also specify the custom segmentation key-value pairs using the unique ID:</span>
-</p>
-<pre><code class="JavaScript">Countly.instance.views.addSegmentationToViewWithID(segmentation);</code></pre>
 <h3 id="h_01HFDVYJHTJKNHSYQAVYRRPPJE">Pausing and Resuming Views</h3>
 <p>
   <span style="font-weight: 400;"></span>This SDK allows you to start multiple
@@ -944,7 +936,7 @@ Countly.disableLocation();</code></pre>
   </p>
   <pre>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY) <br>  ..enableRemoteConfigValueCaching(); </pre>
 </div>
-<h3 id="h_01H930GAQ68M62GD62G8JC2ZVC">Manually Calls</h3>
+<h3 id="h_01H930GAQ68M62GD62G8JC2ZVC">Manual Calls</h3>
 <p>
   There are three ways to trigger remote config value download manually:
 </p>
